--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@hono/node-server": "^1.11.2",
+    "@hono/zod-validator": "^0.2.2",
     "dotenv": "^16.4.5",
     "hono": "^4.4.3",
     "zod": "^3.23.8"
